--- a/public/chat.html
+++ b/public/chat.html
@@ -23,7 +23,6 @@
         <script src="https://s0.pstatp.com/cdn/expire-1-M/jquery-cookie/1.4.1/jquery.cookie.min.js" type="application/javascript"></script>
         <script src="./js/jquery-ajax-cache.min.js" type="application/javascript"></script>
         <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment.js/2.29.1/moment.min.js" type="application/javascript"></script>
-        <script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"></script>
         <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script> 
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script> 
         <script src="./config.js" type="application/javascript"></script>
@@ -105,12 +104,8 @@
             </div>
         </div>
     </body>
-   
+    <script src="./chat-post.js" type="application/javascript"></script>
     <script>
-        if(config.debug)
-            document.write(`<script src="./chat-post.js" type="application/javascript"><\/script>`)
-        else
-            document.write(`<script src="./chat-post.min.js" type="application/javascript"><\/script>`)
     </script>
     <script src="./js/page-post.js" type="application/javascript"></script>
 </html>
