--- a/public/check.html
+++ b/public/check.html
@@ -10,7 +10,6 @@
         <script src="https://s2.pstatp.com/cdn/expire-1-M/jquery/3.5.1/jquery.min.js" type="application/javascript"></script>
         <script src="https://s0.pstatp.com/cdn/expire-1-M/jquery-cookie/1.4.1/jquery.cookie.min.js" type="application/javascript"></script>
         <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment.js/2.29.1/moment.min.js" type="application/javascript"></script>
-        <script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"></script>
         <script>
             
         </script>
@@ -510,7 +509,7 @@
                 if(res.code ==0){
 
                 }else{
-                    alert(res.msg)
+                    alert(res.message)
                 }
             }
         })
