--- a/public/discover.html
+++ b/public/discover.html
@@ -25,13 +25,11 @@
         <script src="https://s0.pstatp.com/cdn/expire-1-M/jquery-cookie/1.4.1/jquery.cookie.min.js" type="application/javascript"></script>
         <script src="./js/jquery-ajax-cache.min.js" type="application/javascript"></script>
         <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment.js/2.29.1/moment.min.js" type="application/javascript"></script>
+        <script>
+        </script>
         <!-- <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script>  -->
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script>
         <script src="./config.js" type="application/javascript"></script>
-        <script>
-            if(config.debug)
-                document.write(`<script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"><\/script>`);
-        </script>
         <script src="./js/common.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
         <script src="./js/page-pre.js" type="application/javascript"></script>
@@ -960,13 +958,8 @@
             </div>
         </div>
     </body>
-   
+    <script src="./discover-post.js" type="application/javascript"></script>
     <script>
-        if(config.debug)
-            document.write(`<script src="./discover-post.js" type="application/javascript"><\/script>`);
-        else
-            document.write(`<script src="./discover-post.min.js" type="application/javascript"><\/script>`);
-
         document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1279792021'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1279792021%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));
     </script>
     <script src="./js/page-post.js" type="application/javascript"></script>
