--- a/public/tool.html
+++ b/public/tool.html
@@ -626,7 +626,7 @@
                         }
                     }else{
                         $('#a1').css('color','red');
-                        $('#a1').text(res.msg?res.msg : "错误");
+                        $('#a1').text(res.message?res.message : "错误");
                     }
                 }
             })
