--- a/public/wordbook.html
+++ b/public/wordbook.html
@@ -29,8 +29,7 @@
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script>
         <script src="./config.js" type="application/javascript"></script>
         <script>
-            if(config.debug)
-                document.write(`<script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"><\/script>`);
+            
         </script>
         <script src="./js/common.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>
@@ -151,13 +150,8 @@
             <iframe id="extendSearchFrame4"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;background: #ffffff;"></iframe>
         </div>
     </body>
-
+    <script src="./wordbook.js" type="application/javascript"></script>
     <script>
-        if(config.debug)
-            document.write(`<script src="./wordbook.js" type="application/javascript"><\/script>`);
-        else
-            document.write(`<script src="./wordbook.min.js" type="application/javascript"><\/script>`);
-
         document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1279792021'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1279792021%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));
     </script>
     <script src="./js/page-post.js" type="application/javascript"></script>
