--- a/public/history-watch.html
+++ b/public/history-watch.html
@@ -385,7 +385,7 @@
                 </span>
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
-                    onclick="$('#video')[0].pause();location.replace('my.html');">
+                    onclick="$('#video')[0].pause();location.replace('./#/my');">
                     我的
                 </span>
             </div>
@@ -713,12 +713,8 @@
             </div>
         </div>
     </body>
-   
+    <script src="./history-watch-post.js" type="application/javascript"></script>
     <script>
-        if(config.debug)
-            document.write(`<script src="./history-watch-post.js" type="application/javascript"><\/script>`)
-        else
-            document.write(`<script src="./history-watch-post.min.js" type="application/javascript"><\/script>`)
     </script>
     <script src="./js/page-post.js" type="application/javascript"></script>
 </html>
