--- a/public/history1.html
+++ b/public/history1.html
@@ -146,7 +146,7 @@
                 </span>
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
-                    onclick="location.replace('my.html')">
+                    onclick="location.replace('./#/my')">
                     我的
                 </span>
             </div>
