--- a/public/index11.html
+++ b/public/index11.html
@@ -457,7 +457,7 @@
                 </span>
                 <span class="unselectable" 
                     style="font-size:1.6rem;display: inline-block;width:25%;height:5.0rem;line-height:5.0rem;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
-                    onclick="$('#video')[0].pause();location.replace('my.html');">
+                    onclick="$('#video')[0].pause();location.replace('./#/my');">
                     我的
                 </span>
             </div>
@@ -800,11 +800,9 @@
         </div>
     </body>
    
+    <script src="./index-post.js" type="application/javascript"></script>
+    
     <script>
-        if(config.debug)
-            document.write(`<script src="./index-post.js" type="application/javascript"><\/script>`)
-        else
-            document.write(`<script src="./index-post.min.js" type="application/javascript"><\/script>`)
     </script>
     <script src="./js/page-post.js" type="application/javascript"></script>
 </html>
