--- a/public/video.html
+++ b/public/video.html
@@ -222,7 +222,7 @@
                 </span>
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
-                    onclick="$('#video')[0].pause();location.replace('my.html');">
+                    onclick="$('#video')[0].pause();location.replace('./#/my');">
                     我的
                 </span>
             </div>
@@ -232,6 +232,6 @@
         </div>
         
     </body>
-    <script src="./video-post.min.js" type="application/javascript"></script>
+    <script src="./video-post.js" type="application/javascript"></script>
     <script src="./js/page-post.js" type="application/javascript"></script>
 </html>
