--- a/public/discover.html
+++ b/public/discover.html
@@ -32,6 +32,7 @@
         <script src="./config.js" type="application/javascript"></script>
         <script src="./js/common.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
+        <script src="./js/onStart.js" type="application/javascript"></script>    
         <script src="./js/page-pre.js" type="application/javascript"></script>
         <style>
             @media screen and (min-width: 700px) {
