--- a/public/history.html
+++ b/public/history.html
@@ -28,7 +28,8 @@
         <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/imageviewer/1.1.0/viewer.css" type="text/css" rel="stylesheet" />
         <script src="./js/common.js" type="application/javascript"></script>
         <script src="./config.js" type="application/javascript"></script>
-        <script src="./js/log.js" type="application/javascript"></script>
+        <script src="./js/log.js" type="application/javascript"></script>    
+        <script src="./js/onStart.js" type="application/javascript"></script>
         <script src="./js/page-pre.js" type="application/javascript"></script>
         <style>
             /* @media screen and (min-width: 850px) {
