--- a/public/my.html
+++ b/public/my.html
@@ -29,6 +29,7 @@
         <script src="./js/common.js" type="application/javascript"></script>
         <script src="./config.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
+        <script src="./js/onStart.js" type="application/javascript"></script>    
         <script src="./js/page-pre.js" type="application/javascript"></script>
         
     </head>
