--- a/public/video.html
+++ b/public/video.html
@@ -27,6 +27,7 @@
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script> 
         <script src="./config.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
+        <script src="./js/onStart.js" type="application/javascript"></script>    
         <script src="./js/page-pre.js" type="application/javascript"></script>
         <script>
             
