--- a/public/wordbook.html
+++ b/public/wordbook.html
@@ -32,7 +32,8 @@
             
         </script>
         <script src="./js/common.js" type="application/javascript"></script>
-        <script src="./js/log.js" type="application/javascript"></script>
+        <script src="./js/log.js" type="application/javascript"></script>    
+        <script src="./js/onStart.js" type="application/javascript"></script>
         <script src="./js/page-pre.js" type="application/javascript"></script>
         <style>
 
