--- a/public/history1.html
+++ b/public/history1.html
@@ -25,9 +25,9 @@
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script>
         <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/imageviewer/1.1.0/viewer.js" type="application/javascript"></script>
         <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/imageviewer/1.1.0/viewer.css" type="text/css" rel="stylesheet" />
-        <script src="./config.js" type="application/javascript"></script>
+        <script src="./app.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>
-        <script src="./js/page-pre.js" type="application/javascript"></script>
+        <script src="./js/onShow.js" type="application/javascript"></script>
         <style>
             /* @media screen and (min-width: 850px) {
                 body {
