--- a/public/my.html
+++ b/public/my.html
@@ -27,10 +27,10 @@
         <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script> 
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script> 
         <script src="./js/common.js" type="application/javascript"></script>
-        <script src="./config.js" type="application/javascript"></script>
+        <script src="./app.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
         <script src="./js/onStart.js" type="application/javascript"></script>    
-        <script src="./js/page-pre.js" type="application/javascript"></script>
+        <script src="./js/onShow.js" type="application/javascript"></script>
         
     </head>
     <body style="background-color: #000000;width: 100%;height: 100%;margin:0;padding:0;" >
@@ -139,7 +139,7 @@
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
                     onclick="location.replace('list.html')">
-                    资源
+                    收藏
                 </span>
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
