--- a/public/video.html
+++ b/public/video.html
@@ -25,10 +25,10 @@
         <script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"></script>
         <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script> 
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script> 
-        <script src="./config.js" type="application/javascript"></script>
+        <script src="./app.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
         <script src="./js/onStart.js" type="application/javascript"></script>    
-        <script src="./js/page-pre.js" type="application/javascript"></script>
+        <script src="./js/onShow.js" type="application/javascript"></script>
         <script>
             
         </script>
