--- a/public/wordbook.html
+++ b/public/wordbook.html
@@ -27,14 +27,14 @@
         <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment.js/2.29.1/moment.min.js" type="application/javascript"></script>
         <!-- <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script>  -->
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script>
-        <script src="./config.js" type="application/javascript"></script>
+        <script src="./app.js" type="application/javascript"></script>
         <script>
             
         </script>
         <script src="./js/common.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
         <script src="./js/onStart.js" type="application/javascript"></script>
-        <script src="./js/page-pre.js" type="application/javascript"></script>
+        <script src="./js/onShow.js" type="application/javascript"></script>
         <style>
 
 
