--- a/public/history.html
+++ b/public/history.html
@@ -29,7 +29,6 @@
         <script src="./js/common.js" type="application/javascript"></script>
         <script src="./app.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
-        <script src="./js/onStart.js" type="application/javascript"></script>
         <script src="./js/onShow.js" type="application/javascript"></script>
         <style>
             /* @media screen and (min-width: 850px) {
@@ -104,7 +103,7 @@
                 <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
             </div>
             <div style="height:40px;font-size: 0;">
-                <span onclick="history.back()" style="display: inline-block;font-size: 16px;height: 40px;line-height: 40px;text-align: center;width:40px;">
+                <span onclick="app.routeBack()" style="display: inline-block;font-size: 16px;height: 40px;line-height: 40px;text-align: center;width:40px;">
                     &lt;
                 </span>
                 <span style="display: inline-block;font-size: 16px;height: 40px;line-height: 40px;width:calc(100% - 40px);">
