--- a/public/index11.html
+++ b/public/index11.html
@@ -400,7 +400,7 @@
                 <svg style="position:absolute;right:.2rem;top:.4rem;" t="1621525927027" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3665" width="20" height="20"><path d="M826.624 779.008l-130.56-130.56a292.352 292.352 0 1 0-37.376 35.072l131.584 131.584a25.6 25.6 0 0 0 36.352-36.096zM236.8 453.12a241.664 241.664 0 1 1 241.664 241.664 241.92 241.92 0 0 1-241.664-241.664z" fill="#ffffff" p-id="3666"></path><path d="M484.864 242.688a217.6 217.6 0 0 0-187.648 108.288 25.6 25.6 0 0 0 9.984 35.072 25.6 25.6 0 0 0 12.8 3.328 25.6 25.6 0 0 0 22.272-12.544 165.888 165.888 0 0 1 143.36-82.944 25.6 25.6 0 0 0 0-51.2z" fill="#ffffff" p-id="3667"></path></svg>            
             </div> -->
             <div style="position:absolute;bottom:5.1rem;width:100%;height:8.3rem;font-size:.0rem;box-sizing: border-box;background-color: #272727;padding:1.0rem 0;">
-                <img id="headImg" draggable="false" style="width:3.8rem;height:3.8rem;cursor: pointer;border:.1rem solid #9c9c9c;
+                <img id="headImage" draggable="false" style="width:3.8rem;height:3.8rem;cursor: pointer;border:.1rem solid #9c9c9c;
                     border-radius: .2rem 0 0 .2rem;display:inline-block;vertical-align: middle;margin-left:.5rem;"/>
                 <div id="onlyLookHim" style="width:5.0rem;height:4.0rem;font-size: 1.3rem;color: #ffffff;text-align: center;display:inline-block;vertical-align: middle;
                     box-sizing: border-box;cursor: pointer;border:.1rem solid #9c9c9c;border-radius:0 .2rem .2rem 0;color: rgb(191, 187, 187);
@@ -426,7 +426,7 @@
                 </div>
             </div>
 
-            <!-- <img id="headImg" draggable="false" style="position:absolute;width:4.5rem;height:4.5rem;bottom:15.0rem;right:1.0rem;cursor: pointer;border:.1rem solid #9c9c9c;
+            <!-- <img id="headImage" draggable="false" style="position:absolute;width:4.5rem;height:4.5rem;bottom:15.0rem;right:1.0rem;cursor: pointer;border:.1rem solid #9c9c9c;
                 box-sizing: border-box;border-radius: .3rem;"/>
             <div id="onlyLookHim" style="position:absolute;width:4.5rem;height:3.0rem;bottom:12.1rem;right:1.0rem;font-size: 1.3rem;color: #ffffff;text-align: center;
                 padding:.5rem 0;box-sizing: border-box;cursor: pointer;border:.1rem solid #9c9c9c;border-radius: .3rem;color: rgb(191, 187, 187);">
