--- a/public/test.html
+++ b/public/test.html
@@ -158,7 +158,7 @@
         }
         page.en=en
         
-        var no = getUrlParam('no')
+        var no = getQueryParam('no')
         $('#startFn1').click(function(){
             $('#video')[0].play()
         })
@@ -200,7 +200,7 @@
             $('#video')[0].src = URL.createObjectURL(mp4)
         });
         
-        function getUrlParam(name)
+        function getQueryParam(name)
         {
             var query =decodeURIComponent(window.location.search.substring(1));
             var vars = query.split("&");
