--- a/public/discover-video-title.html
+++ b/public/discover-video-title.html
@@ -3,7 +3,7 @@
         border-radius: 2px 0 0 2px;display:inline-block;vertical-align: middle;margin-left:5px;"/>
     <div id="onlyLookHim" style="width:50px;height:40px;font-size: 13px;color: #ffffff;text-align: center;display:inline-block;vertical-align: middle;
         box-sizing: border-box;cursor: pointer;border:1px solid #9c9c9c;border-radius:0 2px 2px 0;color: rgb(191, 187, 187);
-        margin-left: -1px;line-height: 40px;margin-right:5px;">
+        margin-left: -1px;line-height: 40px;">
         只看Ta
     </div>
     <!-- <div id="chatminpad" style="display:inline-block;height:40px;width:calc(100% - 105px);vertical-align: middle;box-sizing: border-box;">
@@ -12,12 +12,12 @@
             width:calc(100% - 28px);max-height:40px;line-height:20px;box-sizing: border-box;padding-right:5px;vertical-align: middle;">
         </span>
     </div> -->
-    <span id="inSeriesPad" style="display:none;width:35px;height:40px;text-align: center;cursor: pointer;">
+    <span id="inSeriesPad" style="display:none;width:35px;height:40px;text-align: center;cursor: pointer;margin-left: 5px;">
         <img src="./img/series.png" style="width:25px;height:25px;display:block;margin:0 5px;" />
         <div class="no" class="ellipsis" style="width:35px;height:15px;line-height:15px;display:block;font-size:12px;color:#b5b5b5;"></div>
     </span>
     <div id="title" class="lines2" style="display:-webkit-inline-box;;height:40px;width:calc(100% - 169px);
-        font-size: 12px;color:#b5b5b5;overflow:hidden;word-break: break-word;line-height:20px;padding: 0 5px;">
+        font-size: 12px;color:#b5b5b5;overflow:hidden;word-break: break-word;line-height:20px;margin-left: 5px;">
     </div>
     <span id="goChatBtn" style="width:35px;height:40px;text-align: center;cursor: pointer;">
         <img src="./img/comment.png"style="width:25px;height:25px;display:block;margin:0 5px;"  />
